test/cases/bad/bad030.lat
// Cycle

class A extends C {
}

class B extends A {

}

class C extends B {

}

class D extends B {

}

int main() {
    return 0;
}